# open-meteo-cloudcover

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements-test.txt
.github/workflows/: tests.yml  validate.yml
custom_components/open_meteo_cloudcover/: __init__.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  sensor.py
tests/: conftest.py  test_const.py  test_coordinator.py
